Changed the value for Regenstein pickup locations on ASR requests.

--- a/themes/phoenix/templates/myresearch/storagerequest.phtml
+++ b/themes/phoenix/templates/myresearch/storagerequest.phtml
@@ -60,7 +60,7 @@ href="/vufind/MyResearch/Holds">Requested Items</a>.</p>
 	        <label for='asrpickuplocation'>Select Pickup Location</label>
             <select id='asrpickuplocation' name='location'>
 	            <!--<option value=''>Select...</option>-->
-	            <option value='REG'>Regenstein Lib, within 3 business days</option>
+	            <option value='JRLMAIN'>Regenstein Lib, within 3 business days</option>
 	            <!--<option value='MANSUETO'>Mansueto within 15 min during open hours</option>
 	            <option value='CRERAR'>Crerar Lib, within 1 business day</option>
 	            <option value='LAW'>D'Angelo Law Lib, within 1 business day</option>
