Fixed bug with location status override on full record page.

--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -372,7 +372,7 @@
                  <?php /* Begin: Disable Configurable EC Status for Specific Locations (Revert Later) */ ?>
                  <?php $building = $this->ServiceLinks()->getLocation($row['locationCodes'], 'library')?>
                  <?php $blacklist = ['dll', 'eck', 'ssad', 'jcl']?>
-                 <?php if (!in_array($building, $blacklist)): ?>
+                 <?php if (in_array($building, $blacklist)): ?>
                    <?php $display_status ='Unavailable - Building Closed'; ?>
                    <span class="text-danger">
                  <?php /* END: Disable Configurable EC Status for Specific Locations (Revert Later) */ ?>
