Added handling for users without ILL privileges on the ASR form page.

--- a/themes/phoenix/templates/myresearch/storagerequest.phtml
+++ b/themes/phoenix/templates/myresearch/storagerequest.phtml
@@ -2,10 +2,20 @@
     // Set up page title:
     $this->headTitle('Mansueto Cart');
 
+    $grouperGroups = $this->ServiceLinks()->getGrouperGroups();
+    $isILLAuthorized = $this->ServiceLinks()->isMemberOf('uc:applications:library:ill:authorized');
+
 ?>
+
 <div class="<?=$this->layoutClass('mainbody')?> col-sm-9">
     <h2>Mansueto Cart</h2>
     <?=$this->flashmessages()?>
+
+    <?php if ($isILLAuthorized == false):?>
+      <div class="alert alert-danger">
+        <p>At this time, paging services are limited to current students, faculty, and staff of University of Chicago. Please monitor the Library website for changes to services as we reopen.</p>
+      </div>
+    <?php else: ?>
 
     <? if (empty($this->storagerequests)): ?>
         <p>You do not have any Mansueto requests waiting to be
@@ -73,6 +83,8 @@ href="/vufind/MyResearch/Holds">Requested Items</a>.</p>
             </p>
 	    </form>
     <? endif; ?>
+
+    <?php endif; ?><? // END if $isILLAuthorized == false ?>
 </div>
 
 <div class="<?=$this->layoutClass('sidebar')?> col-sm-3">
